PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/ContainerExistsLength.pf
module ContainerExistsLength {

    a (Int, String) = (31,"test")

    fun testSomething() : Int {

        i Int = #a
         
        return i
    }
}