PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/ContainerExistsLength.pf
module ContainerExistsLength {

    fun testSomething() : Int {

        i Int = #a
         
        return i
    }
}